feat: add Google Sign-In button and localization support
- Introduced a new button for Google Sign-In in the login view, enhancing user authentication options.
- Added localized strings for the Google Sign-In button in English and Brazilian Portuguese.
- Included the Google logo as an asset for the button's icon.
- Implemented an image extension for resizing while preserving color, improving the visual consistency of the button.

--- a/FinanceApp/Resources/Localizable.xcstrings
+++ b/FinanceApp/Resources/Localizable.xcstrings
@@ -1497,6 +1497,23 @@
         }
       }
     },
+    "login.googleSignIn" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Login with Google"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Entrar com Google"
+          }
+        }
+      }
+    },
     "login.registerLink" : {
       "extractionState" : "manual",
       "localizations" : {
