feat: enhance login and user management with Face ID support
- Added FaceIDManager class to handle Face ID authentication and user settings.
- Updated LoginView and LoginViewController to integrate Face ID options during user login and registration.
- Refactored SecureLocalDataManager to improve user data management and cleanup processes.
- Introduced UserDataBridge for managing user data setup and cleanup after authentication.
- Enhanced error handling and user feedback for biometric authentication failures.
- Updated localization strings for new Face ID related messages.

--- a/FinanceApp/Resources/Localizable.xcstrings
+++ b/FinanceApp/Resources/Localizable.xcstrings
@@ -1106,6 +1106,23 @@
         }
       }
     },
+    "error.tryAgain" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Try again"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tentar novamente"
+          }
+        }
+      }
+    },
     "faceid.alert.subtitle" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1442,23 +1459,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Erro"
-          }
-        }
-      }
-    },
-    "login.error.tryAgain" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Try again"
-          }
-        },
-        "pt-BR" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Tentar novamente"
           }
         }
       }
